# bra-database

./: .gitignore  .travis.yaml  .travis.yml  Dockerfile  README.md  cicd.py  cronjob.yaml  deploy.sh  loop.sh  pyproject.toml  run.py  setup.cfg
.github/workflows/: gcp.yml
bra_database/: __init__.py  downloader.py  inserter.py  parser.py  utils.py
kubernetes/: cronjob.yaml
scripts/: build.sh  deploy.sh  run.sh
tests/: __init__.py  test_downloader.py  test_inserter.py  test_parser.py  test_run.py  test_utils.py
